@@ -1,0 +1,1 @@
+a simple command-line interface for IPMI-enabled devices through an IPMIv1.5 or IPMIv2.0 LAN interface
