@@ -1,0 +1,6 @@
+# This file is auto-generated by 'make config'.
+# Options for ipmitool-1.8.15_1
+_OPTIONS_READ=ipmitool-1.8.15_1
+_FILE_COMPLETE_OPTIONS_LIST=DOCS FREEIPMI
+OPTIONS_FILE_UNSET+=DOCS
+OPTIONS_FILE_UNSET+=FREEIPMI
