@@ -26,6 +26,7 @@ Changes:
 - Add sendmail_path to php.ini to use mail() function.
 - Add auto start/stop VM. (virtualbox)
 - Add syncthing and related user and group.
+- Add IPMItool needs ipmi_load enabled in System|Advanced|loader.conf.
 - Remove usesendfile on CIFS/SMB.
 - Remove legacy disk aliases such as /dev/ad0.
 - Change DSA private key to RSA private key on SSH service.
